--- a/Front/vite-project/src/templates/cadastro_voluntario.html
+++ b/Front/vite-project/src/templates/cadastro_voluntario.html
@@ -15,7 +15,7 @@
   <title>Vite + React</title>
 </head>
 
-<body>
+<body class="body-vol">
   <header>
     <nav class="hdr">
       <div class="hdr-mobile">
@@ -89,13 +89,14 @@
       </div>
     </nav>
   </header>
+  <img class="login-img" src="../assets/images/Animais/mamifero/tatucanastra/tatu_canastra.jpg">
   <section id="titulo">
-    <h1><em><u>Vem ser voluntário!</u></em></h1>
+    <h1 class="titulovol"><em>Vem ser voluntário!</em></h1>
   </section>
-  <section class="boxcad">
+  <section class="boxcad-login">
     <form name="cadastro" class="cadastro">
       <fieldset>
-        <legend>Voluntário</legend>
+        <legend>Seja um de nós!</legend>
         <label for="email">
           E-mail:
         </label>
