--- a/Front/vite-project/src/templates/login.html
+++ b/Front/vite-project/src/templates/login.html
@@ -14,7 +14,7 @@
   <title>Login</title>
 </head>
 
-<body>
+<body class="body-vol">
   <header>
     <nav class="hdr">
       <div class="hdr-mobile">
@@ -88,10 +88,11 @@
       </div>
     </nav>
   </header>
+  <img class="login-img" src="../assets/images/Animais/ave/ararinha_azul/arararinhajade.jpg">
   <section id="titulo">
-    <h1 class="titulologin"><em><u>Login</u></em></h1>
+    <h1 class="titulologin"><em>Login</em></h1>
   </section>
-  <section class="boxcad">
+  <section class="boxcad-login">
     <form name="cadastro" class="cadastro">
       <fieldset>
         <legend>Entre em sua conta</legend>
