--- a/Front/vite-project/src/templates/registro.html
+++ b/Front/vite-project/src/templates/registro.html
@@ -15,7 +15,7 @@
   <title>Vite + React</title>
 </head>
 
-<body>
+<body class="body-vol">
   <header>
     <nav class="hdr">
       <div class="hdr-mobile">
@@ -90,7 +90,7 @@
     </nav>
   </header>
   <section id="titulo">
-    <h1 class="tituloregistro"><em><u>Registrar</u></em></h1>
+    <h1 class="tituloregistro"><em>Registrar</em></h1>
   </section>
   <section class="boxcad">
     <form name="cadastro" class="cadastro">
