--- a/Front/vite-project/src/static/about.css
+++ b/Front/vite-project/src/static/about.css
@@ -1,5 +1,4 @@
-.container-about,
-.container-about-2 {
+.container-about, .container-about-2 {
   display: flex;
   justify-content: center;
   padding: 1.25em;
@@ -18,8 +17,7 @@
   justify-content: center;
 }
 
-.about-image-container,
-.about-text {
+.about-image-container, .about-text {
   margin-bottom: 1.25em;
 }
 
@@ -30,8 +28,7 @@
   object-fit: cover;
 }
 
-.titulo-about,
-.titulo-card {
+.titulo-about, .titulo-card {
   font-size: 1.5rem;
   font-weight: 600;
   margin: 0.5em 0;
@@ -45,8 +42,7 @@
   text-indent: 1.5em;
 }
 
-.about-text,
-.about-button {
+.about-text, .about-button {
   color: var(--cor-escura-2);
   font-size: 1rem;
 }
@@ -88,8 +84,7 @@
   text-align: center;
 }
 
-.card-container-about-title,
-.card-container-about {
+.card-container-about-title, .card-container-about {
   background-color: var(--cor-animal-clara-2);
 }
 
@@ -126,14 +121,11 @@
   margin-bottom: 0.5rem;
 }
 
-
 .about-text-card {
   font-size: 0.95rem;
   color: var(--cor-escura-1);
   line-height: 1.6;
 }
-
-
 
 @media screen and (min-width: 700px) {
 
@@ -142,8 +134,7 @@
     height: 70%;
   }
 
-  .about-text,
-  .about-text-list {
+  .about-text, .about-text-list {
     font-size: 1.125rem;
   }
 
@@ -184,15 +175,13 @@
     height: 40%;
   }
 
-  .titulo-about,
-  .titulo-card {
+  .titulo-about, .titulo-card {
     font-size: 2.25rem;
     font-weight: 600;
     margin: 0.5em 0;
   }
 
-  .about-text,
-  .about-text-list {
+  .about-text, .about-text-list {
     font-size: 1.25rem;
   }
 
@@ -234,7 +223,6 @@
   .container-about-2 {
     height: 30vh;
   }
-
 }
 
 @media screen and (min-width: 1200px) {
@@ -243,5 +231,4 @@
     margin-right: 1em;
     height: 35vh  ;
   }
-
 }
