--- a/Front/vite-project/src/static/animais_regioes.css
+++ b/Front/vite-project/src/static/animais_regioes.css
@@ -3,6 +3,7 @@
   margin-top: 0.5vw;
   margin-bottom: 2vw;
 }
+
 .apadContent h3{
   font-weight: bolder;
   display: block;
@@ -24,9 +25,7 @@
   text-align: center;
 }
 
-.title-anml,
-.subtitle-anml,
-.anml-name {
+.title-anml, .subtitle-anml, .anml-name {
   color: var(--cor-escura-2);
   font-weight: 600;
 }
@@ -39,12 +38,12 @@
   width: min-content;
   text-align: center;
 }
+
 .title-anml {
   margin: 1em 0;
 }
 
-.anml-name,
-.anml-spe {
+.anml-name, .anml-spe {
   margin: 0.2em 0;
   font-size: 1rem;
 }
@@ -134,9 +133,7 @@
   background-color: var(--cor-label-male);
 }
 
-.ext1,
-.ext2,
-.ext3 {
+.ext1, .ext2, .ext3 {
   color: var(--cor-escura-2)
 }
 
